--- a/gb/16/7/19/n8116011.md
+++ b/gb/16/7/19/n8116011.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rlilro332/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rlilro332/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rlilro332/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rlilro332/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rlilro332/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rlilro332/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rlilro332/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【文史】李自成为人简朴善待军民 深获民心</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/07/1607191011511456-600x400.jpg" />
 <h6>李自成（绘图：古瑞珍／大纪元）
 </h6>
 <hr>
-<p><ahref="https://github.com/rlilro332/djy/blob/master/gb/tag/%E6%9D%8E%E8%87%AA%E6%88%90.md#1">李自成</a>从一介平民能够在十几年中通过不断征战，打败明朝军队，建立政权，首要的原因自然是天象使然。明朝后期皇帝怠政，不修德行，官场腐败严重，民不聊生，明朝的气数确实尽了，这也就可以解释为何李自成一再得到上天的护佑，其他的原因还有：</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E8%87%AA%E6%88%90.md#1">李自成</a>从一介平民能够在十几年中通过不断征战，打败明朝军队，建立政权，首要的原因自然是天象使然。明朝后期皇帝怠政，不修德行，官场腐败严重，民不聊生，明朝的气数确实尽了，这也就可以解释为何李自成一再得到上天的护佑，其他的原因还有：</p>
 <p><strong>一、百折不挠</strong></p>
-<p><ahref="https://github.com/rlilro332/djy/blob/master/gb/tag/%E6%9D%8E%E8%87%AA%E6%88%90.md#1">李自成</a>加入农民军后，先后投奔过多人，但不论是顺境还是逆境，他都没有向明朝廷屈服过，而且相信自己可以成就一番事业。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E8%87%AA%E6%88%90.md#1">李自成</a>加入农民军后，先后投奔过多人，但不论是顺境还是逆境，他都没有向明朝廷屈服过，而且相信自己可以成就一番事业。</p>
 <p>史载李自成被困商洛山中时，身边只有极少的残兵败将，多数人意志消沉，唯有他泰然自若，白天打猎，晚上读书，还鼓励大家说：“熬过这厄运就好了，取天下指日可待”。</p>
 <p>小舅子高一功（高立功、高桂英的弟弟）在一旁偷笑。李自成正色说：“当年汉高祖虽百战百败，最终却夺得了天下，你知道这些吗？”</p>
 <p><strong>二、为人简朴 </strong><strong>不好酒色财 </strong><strong>善待手下</strong></p>
@@ -40,47 +40,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/2/7/26/n232331.md#1">1645年7月26日 李自成九宫山遇难</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/4/8/15/n628044.md#1">闯王李自成陕北行宫  年久失修</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/5/4/12/n886183.md#1">湖北发现古物  可能为李自成佩剑</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/16/7/17/n8108908.md#1">【文史】李自成应运而生 承天命初露头角</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/12/2/n12590629.md#1">两晋郭璞才华高 善观天象可预知生死吉凶</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/11/15/n12550906.md#1">准确预测火灾山崩的东汉隐士</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/11/4/n12525960.md#1">【佳人传】与丈夫郝懿行齐名的校书女</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/10/29/n12511720.md#1">【佳人传】闺阁世界的奇伟之才——沈善宝</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/10/8/n12461705.md#1">准确预测到两朝开国帝王的奇人韦鼎</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/2/7/26/n232331.md#1">1645年7月26日 李自成九宫山遇难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/4/8/15/n628044.md#1">闯王李自成陕北行宫  年久失修</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/5/4/12/n886183.md#1">湖北发现古物  可能为李自成佩剑</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/17/n8108908.md#1">【文史】李自成应运而生 承天命初露头角</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/20/n13659805.md#1">首个见过英法国王并被欧洲人记住的中国人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/25/n13603931.md#1">【奇人】术数家田忠良 因何受元世祖忽必烈重用？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/25/n13603932.md#1">【奇人】铁冠道人助明太祖打天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/1/20/n13518302.md#1">【奇医】不用开膛的“提心”医术 救命回春人称奇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/1/29/n13540055.md#1">北齐奇人异士多 善断吉凶 能预测人生死</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/18/n12820630.md#1">二人元神离体游地府 都看见了他</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/21/n12825595.md#1">光的流动和辉煌：一幅值得记住的油画</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12831366.md#1">【时事纵横】欧盟击中共要害 习“胜利”不保？</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12831388.md#1">【秦鹏直播】习搬石砸自己脚 欧洲停议欧中协议</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12830225.md#1">【新闻大家谈】战狼失控 30国战人权恶棍</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12828661.md#1">演少女被嘲体形太壮 刘涛霸气回应也帮了杨幂</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/21/n12826335.md#1">习近平错估世界局势 美高层接连警告</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12827005.md#1">广州番禺村委会被炸 5死5伤 传涉贪污</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12828661.md#1">演少女被嘲体形太壮 刘涛霸气回应也帮了杨幂</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12831214.md#1">范冰冰公开健身视频 真实身材媲美教练</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12828972.md#1">谢霆锋被爆投资失利 近亿港元店租金大跌五成</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12829042.md#1">绿茶一般人不适合喝？名中医教6大类茶养生喝法</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/19/n12821223.md#1">洋葱可防癌、降三高 吃这2颜色抗氧化效果最好</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12827458.md#1">心情高低起伏 男子遗失百万美元彩券后寻回</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/22/n12826876.md#1">iPhone手机在湖底泡水半年 竟然还能用</a></li>
-<li><a href="https://github.com/rlilro332/djy/blob/master/gb/21/3/23/n12829684.md#1">女牙医生产时死了一回 看见“神奇丛林”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rlilro332/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rlilro332/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/19/n8116011.htm">【文史】李自成为人简朴善待军民 深获民心</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/19/n8116011.htm">【文史】李自成为人简朴善待军民 深获民心</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rlilro332/djy/blob/master/gb/16/7/19/n8116011.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rlilro332/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rlilro332/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rlilro332/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rlilro332/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rlilro332/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/7/19/n8116011.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
